--- a/ansible/install_applications/roles/infra-docker-registry.deploy/defaults/main.yml
+++ b/ansible/install_applications/roles/infra-docker-registry.deploy/defaults/main.yml
@@ -2,6 +2,10 @@
 
 docker_registry_enabled: true
 
+#docker_registry_users:
+#  - name: user
+#    password: password
+
 docker_registry_notification_endpoints:
   - name: docker-registry-ui
     url: http://docker-registry-ui.infra-docker-registry-ui.svc.cluster.local:8000/docker-regitry-ui/api/events
