--- a/ansible/install_applications/roles/infra-docker-registry-ui.deploy/defaults/main.yml
+++ b/ansible/install_applications/roles/infra-docker-registry-ui.deploy/defaults/main.yml
@@ -1,3 +1,6 @@
 ---
 
 docker_registry_ui_enabled: true
+
+#docker_registry_ui_docker_auth_name: user
+#docker_registry_ui_docker_auth_password: password
