--- a/ansible/install_applications/vars/infra-docker-registry-ui.yml
+++ b/ansible/install_applications/vars/infra-docker-registry-ui.yml
@@ -29,5 +29,8 @@ docker_registry_ui:
     limits_memory: "{{ docker_registry_ui_container_limits_memory | default('32Mi') }}"
 
   context_root: /docker-registry-ui
+  registry:
+    username: "{{ docker_registry_ui_registry_username }}"
+    password: "{{ docker_registry_ui_registry_password }}"
   admin_users: "{{ docker_registry_ui_admin_users | default([]) }}"
   event_api_token: "{{ _docker_registry_ui_var_loader.event_api_token }}"
