--- a/ansible/install_applications/vars/web-ttrss.yml
+++ b/ansible/install_applications/vars/web-ttrss.yml
@@ -43,10 +43,16 @@ ttrss:
 
   plugins:
     data_migration:
+      repo_url: "https://git.tt-rss.org/fox/ttrss-data-migration"
+      branch: master
       commit: 7ad0075303
     auth_ldap:
+      github_repo: "hydrian/TTRSS-Auth-LDAP"
+      branch: master
       commit: 0cc2a21441f99eef8368cfe0fbdbb78126e28d61
     mailer_smtp:
+      repo_url: "https://git.tt-rss.org/fox/ttrss-mailer-smtp"
+      branch: master
       commit: 1f9daa1b78
 
   ldap:
