--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/general.alerts.yaml
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/general.alerts.yaml
@@ -4,6 +4,7 @@
     annotations:
       message: '{{ printf "%.4g" $value }}% of the {{ $labels.job }}/{{ $labels.service
         }} targets in {{ $labels.namespace }} namespace are down.'
+      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/targetdown
     expr: 100 * (count(up == 0) BY (job, namespace, service) / count(up) BY (job,
       namespace, service)) > 10
     for: 10m
@@ -17,6 +18,7 @@
         and always fire against a receiver. There are integrations with various notification
         mechanisms that send a notification when this alert is not firing. For example the
         "DeadMansSnitch" integration in PagerDuty.
+      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/watchdog
     expr: vector(1)
     labels:
       severity: none
