--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-system-kubelet.alerts.yaml
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-system-kubelet.alerts.yaml
@@ -32,7 +32,7 @@
       )
       /
       max by(node) (
-        kube_node_status_capacity_pods{job="kube-state-metrics"} != 1
+        kube_node_status_capacity{job="kube-state-metrics",resource="pods"} != 1
       ) > 0.95
     for: 15m
     labels:
