--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/operator/prometheusCustomResourceDefinition.yaml
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/operator/prometheusCustomResourceDefinition.yaml
@@ -8,6 +8,8 @@ metadata:
 spec:
   group: monitoring.coreos.com
   names:
+    categories:
+    - prometheus-operator
     kind: Prometheus
     listKind: PrometheusList
     plural: prometheuses
@@ -3388,8 +3390,8 @@ spec:
                     type: string
                 type: object
               podMonitorNamespaceSelector:
-                description: Namespaces to be selected for PodMonitor discovery. If
-                  nil, only check own namespace.
+                description: Namespace's labels to match for PodMonitor discovery.
+                  If nil, only check own namespace.
                 properties:
                   matchExpressions:
                     description: matchExpressions is a list of label selector requirements.
@@ -3898,6 +3900,14 @@ spec:
                     bearerTokenFile:
                       description: File to read bearer token for remote write.
                       type: string
+                    headers:
+                      additionalProperties:
+                        type: string
+                      description: Custom HTTP headers to be sent along with each
+                        remote write request. Be aware that headers that are set by
+                        Prometheus itself can't be overwritten. Only valid in Prometheus
+                        versions 2.25.0 and newer.
+                      type: object
                     name:
                       description: The name of the remote write queue, must be unique
                         if specified. The name is used in metrics and logging in order
@@ -4168,7 +4178,8 @@ spec:
                   (milliseconds seconds minutes hours days weeks years).
                 type: string
               retentionSize:
-                description: Maximum amount of disk space used by blocks.
+                description: 'Maximum amount of disk space used by blocks. Supported
+                  units: B, KB, MB, GB, TB, PB, EB. Ex: `512MB`.'
                 type: string
               routePrefix:
                 description: The route prefix Prometheus registers HTTP handlers for.
@@ -4435,7 +4446,7 @@ spec:
                   to use to run the Prometheus Pods.
                 type: string
               serviceMonitorNamespaceSelector:
-                description: Namespaces to be selected for ServiceMonitor discovery.
+                description: Namespace's labels to match for ServiceMonitor discovery.
                   If nil, only check own namespace.
                 properties:
                   matchExpressions:
@@ -5072,6 +5083,11 @@ spec:
                     required:
                     - key
                     type: object
+                  tracingConfigFile:
+                    description: TracingConfig specifies the path of the tracing configuration
+                      file. When used alongside with TracingConfig, TracingConfigFile
+                      takes precedence.
+                    type: string
                   version:
                     description: Version describes the version of Thanos to use.
                     type: string
