Add monitoring-testfile-collectors and apt_updates collector

--- a/ansible/install_infra/site.yml
+++ b/ansible/install_infra/site.yml
@@ -7,6 +7,7 @@
     - common-apt
     - firewall
     - usb-serial
+    - monitoring-textfile-collectors
 
 - name: Provision APC UPS
   hosts: apcups
