--- a/ansible/install_infra/roles/monitoring-textfile-collectors/tasks/main.yml
+++ b/ansible/install_infra/roles/monitoring-textfile-collectors/tasks/main.yml
@@ -16,12 +16,30 @@
     path: "{{ textfile_collector_scripts_directory }}"
     state: directory
 
+- name: Deploy cleaner
+  template:
+    src: "cleaner.sh.j2"
+    dest: "{{ textfile_collector_scripts_directory }}/cleaner.sh"
+    mode: 0755
+
 - name: Deploy collectors
   template:
     src: "collectors/{{ item.script }}.j2"
     dest: "{{ textfile_collector_scripts_directory }}/{{ item.script }}"
     mode: 0755
   loop: "{{ textfile_collectors | default([]) }}"
+
+- name: Create cleaner cron job
+  cron:
+    name: "cleaner"
+    cron_file: "textfile_collectors"
+    user: root
+    job: "{{ textfile_collector_scripts_directory }}/cleaner.sh"
+    minute: "*/5"
+    hour: "*"
+    day: "*"
+    weekday: "*"
+    month: "*"
 
 - name: Create collectors cron jobs
   cron:
