--- a/ansible/inventories/vagrant/group_vars/loadbalancers/nginx.yml
+++ b/ansible/inventories/vagrant/group_vars/loadbalancers/nginx.yml
@@ -17,9 +17,7 @@ nginx_upstreams:
       - "{{ kubernetes_nginx_ingress_lb_ip }}:{{ kubernetes_ingress_https_port }}"
   - name: kubernetes-lemonldap-handler-ingress
     servers:
-      - master-1:{{ kubernetes_ingress_lemonLdap_handler_port }}
-      - master-2:{{ kubernetes_ingress_lemonLdap_handler_port }}
-      - master-3:{{ kubernetes_ingress_lemonLdap_handler_port }}
+      - "{{ kubernetes_ingress_lemonLdap_handler_lb_ip }}:{{ kubernetes_ingress_lemonLdap_handler_port }}"
   - name: kubernetes-openldap-ingress
     servers:
       - "{{ kubernetes_nginx_ingress_lb_ip }}:{{ kubernetes_ingress_openldap_port }}"
