--- a/ansible/inventories/vagrant/group_vars/all/kubernetes-infra.yml
+++ b/ansible/inventories/vagrant/group_vars/all/kubernetes-infra.yml
@@ -8,6 +8,7 @@ metallb_ip_pools:
 
 kubernetes_nginx_ingress_lb_ip: 192.168.100.20
 kubernetes_ingress_lemonLdap_handler_lb_ip: 192.168.100.21
+kubernetes_ingress_openldap_lb_ip: 192.168.100.22
 kubernetes_ingress_http_port: 80
 kubernetes_ingress_https_port: 443
 kubernetes_ingress_lemonLdap_handler_port: 9000
