--- a/ansible/inventories/vagrant/inventory.ini
+++ b/ansible/inventories/vagrant/inventory.ini
@@ -1,24 +1,24 @@
 
-master-1 ansible_host=192.168.100.11
-master-2 ansible_host=192.168.100.12
-master-3 ansible_host=192.168.100.13
-node-home ansible_host=192.168.100.14
+master-test-1 ansible_host=192.168.100.11
+master-test-2 ansible_host=192.168.100.12
+master-test-3 ansible_host=192.168.100.13
+node-test-home ansible_host=192.168.100.14
 
 [controller]
 # Dedicated controller
 # localhost ansible_python_interpreter=/root/ansible_venv/bin/python ansible_host=192.168.100.20
-master-1 ansible_python_interpreter=/root/ansible_venv/bin/python ansible_host=192.168.100.11
+master-test-1 ansible_python_interpreter=/root/ansible_venv/bin/python ansible_host=192.168.100.11
 
 [all_hosts]
-master-1
-master-2
-master-3
-node-home
+master-test-1
+master-test-2
+master-test-3
+node-test-home
 
 [dns_servers]
-master-1
-master-2
-master-3
+master-test-1
+master-test-2
+master-test-3
 
 [keepalived:children]
 loadbalancers
@@ -26,37 +26,37 @@ wireguard_servers
 kubernetes_masters
 
 [loadbalancers]
-master-1
-master-2
-master-3
+master-test-1
+master-test-2
+master-test-3
 
 [wireguard_servers]
-master-1
-master-2
-master-3
+master-test-1
+master-test-2
+master-test-3
 
 [kubernetes_master_bootstrap]
-master-1
+master-test-1
 
 [kubernetes_master_others]
-master-2
-master-3
+master-test-2
+master-test-3
 
 [kubernetes_masters:children]
 kubernetes_master_bootstrap
 kubernetes_master_others
 
 [kubernetes_workers]
-node-home
+node-test-home
 
 [kubernetes_nodes:children]
 kubernetes_masters
 kubernetes_workers
 
 [glusterfs_servers]
-master-1
-master-2
-master-3
+master-test-1
+master-test-2
+master-test-3
 
 [glusterfs_clients:children]
 kubernetes_nodes
@@ -66,7 +66,7 @@ glusterfs_servers
 glusterfs_clients
 
 [apcups]
-master-1
+master-test-1
 
 [bluetooth]
-node-home
+node-test-home
