--- a/vagrant/Vagrantconfig.yaml
+++ b/vagrant/Vagrantconfig.yaml
@@ -15,9 +15,9 @@ common:
 #  ip: 192.168.100.20
 #  docker_disk_size: 32768
 
-# Use master-1 to save resources:
+# Use master-test-1 to save resources:
 controller:
-  name: "master-1"
+  name: "master-test-1"
   cpu: 3
   cpu_execution_cap: 33
   memory: 6144
@@ -27,7 +27,7 @@ controller:
   data_disk_size: 8192
 
 nodes:
-  - name: "master-2"
+  - name: "master-test-2"
     cpu: 6
     cpu_execution_cap: 33
     memory: 6144
@@ -35,7 +35,7 @@ nodes:
     additional_bridge: True
     docker_disk_size: 32768
     data_disk_size: 65536
-  - name: "master-3"
+  - name: "master-test-3"
     cpu: 6
     cpu_execution_cap: 33
     memory: 6144
@@ -43,7 +43,7 @@ nodes:
     additional_bridge: True
     docker_disk_size: 32768
     data_disk_size: 65536
-  - name: "node-home"
+  - name: "node-test-home"
     cpu: 2
     cpu_execution_cap: 33
     memory: 1024
