--- a/ansible/install_applications/roles/home-homeassistant.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/home-homeassistant.deploy/tasks/main.yml
@@ -26,7 +26,7 @@
 
 - name: Fetch Gotify token
   uri:
-    url: "https://{{ groups['kubernetes_nodes'][0] }}:{{ kubernetes_ingress_https_port }}/gotify/application"
+    url: "https://{{ kubernetes_nginx_ingress_lb_ip }}:{{ kubernetes_ingress_https_port }}/gotify/application"
     method: GET
     headers:
       Host: "web.{{ web_base_domain }}"
