--- a/ansible/install_applications/vars/download-sickchill.yml
+++ b/ansible/install_applications/vars/download-sickchill.yml
@@ -6,6 +6,8 @@ _sickchill_var_loader:
     name: "python"
     tag: "3.9.2-alpine3.13"
   version: "v2021.03.18-1"
+  #commit_sha is required for the updater to report the proper number of commits ahead
+  commit_sha: a16038636bfa9fe747f9ef50c785b3b223213122
   namespace: "download-sickchill"
 
 sickchill:
@@ -14,6 +16,7 @@ sickchill:
   namespace: "{{ _sickchill_var_loader.namespace }}"
   base_image: "{{ _sickchill_var_loader.base_image }}"
   version: "{{ _sickchill_var_loader.version }}"
+  commit_sha: "{{ _sickchill_var_loader.commit_sha }}"
   servername: "sickchill.{{ _sickchill_var_loader.namespace }}.svc.cluster.local"
   
   labels_def:
