--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-resources.alerts.yaml
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-resources.alerts.yaml
@@ -11,7 +11,7 @@
         /
       sum(kube_node_status_allocatable{resource="cpu"})
         >
-      (count(kube_node_status_allocatable{resource="cpu"}) -1) / count(kube_node_status_allocatable{resource="cpu"})
+      ((count(kube_node_status_allocatable{resource="cpu"}) > 1) - 1) / count(kube_node_status_allocatable{resource="cpu"})
     for: 5m
     labels:
       severity: warning
@@ -22,11 +22,11 @@
       runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/kubememoryovercommit
       summary: Cluster has overcommitted memory resource requests.
     expr: |
-      sum(namespace_memory:kube_pod_container_resource_requests_bytes:sum{})
+      sum(namespace_memory:kube_pod_container_resource_requests:sum{})
         /
       sum(kube_node_status_allocatable{resource="memory"})
         >
-      (count(kube_node_status_allocatable{resource="memory"})-1)
+      ((count(kube_node_status_allocatable{resource="memory"}) > 1) - 1)
         /
       count(kube_node_status_allocatable{resource="memory"})
     for: 5m
@@ -37,8 +37,11 @@
       description: Cluster has overcommitted CPU resource requests for Namespaces.
       runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/kubecpuquotaovercommit
       summary: Cluster has overcommitted CPU resource requests.
-    expr: "sum(kube_resourcequota{job=\"kube-state-metrics\", type=\"hard\", resource=\"\
-      cpu\"})\n  /\nsum(kube_node_status_allocatable{resource=\"cpu\"}) \n  > 1.5\n"
+    expr: |
+      sum(kube_resourcequota{job="kube-state-metrics", type="hard", resource="cpu"})
+        /
+      sum(kube_node_status_allocatable{resource="cpu"})
+        > 1.5
     for: 5m
     labels:
       severity: warning
