--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/operator/servicemonitorCustomResourceDefinition.yaml
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/operator/servicemonitorCustomResourceDefinition.yaml
@@ -186,7 +186,9 @@ spec:
                       type: string
                     relabelings:
                       description: 'RelabelConfigs to apply to samples before scraping.
-                        More info: https://prometheus.io/docs/prometheus/latest/configuration/configuration/#relabel_config'
+                        Prometheus Operator automatically adds relabelings for a few
+                        standard Kubernetes fields and replaces original scrape job
+                        name with __tmp_prometheus_job_name. More info: https://prometheus.io/docs/prometheus/latest/configuration/configuration/#relabel_config'
                       items:
                         description: 'RelabelConfig allows dynamic rewriting of the
                           label set, being applied to samples before ingestion. It
