--- a/ansible/install_applications/vars/monitoring-kube-state-metrics.yml
+++ b/ansible/install_applications/vars/monitoring-kube-state-metrics.yml
@@ -5,7 +5,7 @@ _kube_state_metrics_var_loader:
   base_image:
     repo: k8s.gcr.io
     name: "kube-state-metrics/kube-state-metrics"
-    tag: "v2.0.0-rc.0"
+    tag: "v2.0.0"
 
 kube_state_metrics:
   enabled: "{{ kube_state_metrics_enabled | default(True) }}"
