--- a/ansible/install_applications/site.yml
+++ b/ansible/install_applications/site.yml
@@ -92,6 +92,10 @@
   tags: kubernetes-app-monitoring-node-exporter-external
   when: node_exporter_external_enabled | bool
 
+- import_playbook: app-monitoring-blackbox-exporter.yml
+  tags: kubernetes-app-monitoring-blackbox-exporter
+  when: blackbox_exporter_enabled | bool
+
 - import_playbook: app-monitoring-nginx-exporter.yml
   tags: kubernetes-app-monitoring-nginx-exporter
   when: nginx_exporter_enabled | bool
