Add probes configuration

--- a/ansible/install_applications/roles/monitoring-blackbox-exporter.deploy/defaults/main.yml
+++ b/ansible/install_applications/roles/monitoring-blackbox-exporter.deploy/defaults/main.yml
@@ -2,3 +2,10 @@
 
 blackbox_exporter_enabled: true
 
+#blackbox_exporter_probes:
+#  - name: example-http
+#    module: http_2xx
+#    interval: 60s
+#    targets:
+#      - http://example.com
+#      - https://example.com
