--- a/ansible/install_applications/roles/monitoring-blackbox-exporter.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/monitoring-blackbox-exporter.deploy/tasks/main.yml
@@ -31,3 +31,36 @@
     context: "{{ kubeconfig_context }}"
   with_fileglob:
     - "{{ role_path }}/app/deploy/*.yaml*"
+
+- name: List existing probes
+  k8s_info:
+    api_version: v1
+    kind: Probe
+    namespace: "{{ blackbox_exporter.namespace }}"
+    kubeconfig: "{{ kubeconfig_path }}"
+    context: "{{ kubeconfig_context }}"
+  register: blackbox_exporter_existing_probes
+
+- name: Prepare lists
+  set_fact:
+    blackbox_exporter_existing_probe_names: "{{ blackbox_exporter_existing_probes.resources | map(attribute='metadata.name') }}"
+    blackbox_exporter_configured_names: "{{ blackbox_exporter.probes | map(attribute='name') }}"
+
+- name: Delete obsolete probes
+  k8s:
+    api_version: v1
+    kind: Probe
+    state: absent
+    namespace: "{{ blackbox_exporter.namespace }}"
+    name: "{{ item }}"
+    kubeconfig: "{{ kubeconfig_path }}"
+    context: "{{ kubeconfig_context }}"
+  loop: "{{ blackbox_exporter_existing_probe_names | difference(blackbox_exporter_configured_names) }}"
+
+- name: Deploy blackbox exporter probes
+  k8s:
+    definition: "{{ lookup('template', role_path + '/app/deploy/probes/probe.yaml.j2') }}"
+    state: present
+    kubeconfig: "{{ kubeconfig_path }}"
+    context: "{{ kubeconfig_context }}"
+  loop: "{{ blackbox_exporter.probes }}"
