Add icmp prober support

--- a/ansible/install_applications/roles/monitoring-blackbox-exporter.deploy/defaults/main.yml
+++ b/ansible/install_applications/roles/monitoring-blackbox-exporter.deploy/defaults/main.yml
@@ -9,3 +9,8 @@ blackbox_exporter_enabled: true
 #    targets:
 #      - http://example.com
 #      - https://example.com
+#  - name: example-icmp
+#    module: icmp_ip4
+#    interval: 60s
+#    targets:
+#      - example.com
