--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-apps.alerts.yaml
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-apps.alerts.yaml
@@ -7,7 +7,7 @@
       runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/kubepodcrashlooping
       summary: Pod is crash looping.
     expr: |
-      rate(kube_pod_container_status_restarts_total{job="kube-state-metrics"}[10m]) * 60 * 5 > 0
+      increase(kube_pod_container_status_restarts_total{job="kube-state-metrics"}[10m]) > 0
     for: 15m
     labels:
       severity: warning
