Install restic and start backing hosts

--- a/ansible/install_infra/site.yml
+++ b/ansible/install_infra/site.yml
@@ -8,6 +8,7 @@
     - firewall
     - usb-serial
     - monitoring-textfile-collectors
+    - { role: restic, tags: backup }
 
 - name: Provision APC UPS
   hosts: apcups
