--- a/ansible/inventories/vagrant/group_vars/all/backup.yml
+++ b/ansible/inventories/vagrant/group_vars/all/backup.yml
@@ -9,6 +9,13 @@ restic_host_backup_repository:
     - /etc
     - /home
     - /root
+  retention:
+    keep_hourly: 24
+    keep_daily: 7
+    keep_weekly: 4
+    keep_monthly: 12
+    keep_yearly: 2
 
 restic_repositories:
   - "{{ restic_host_backup_repository }}"
+restic_repositories_maintenance_enabled: True
