--- a/ansible/inventories/vagrant/group_vars/all/backup.yml
+++ b/ansible/inventories/vagrant/group_vars/all/backup.yml
@@ -16,6 +16,20 @@ restic_host_backup_repository:
     keep_monthly: 12
     keep_yearly: 2
 
+restic_apps_backup_repository:
+  name: apps_backup
+  enabled: True
+  repository: /tmp/apps_backup
+  password: Passw0rd
+  retention:
+    keep_hourly: 24
+    keep_daily: 7
+    keep_weekly: 4
+    keep_monthly: 12
+    keep_yearly: 2
+
 restic_repositories:
   - "{{ restic_host_backup_repository }}"
+  - "{{ restic_apps_backup_repository }}"
+
 restic_repositories_maintenance_enabled: True
